获取今日、随机、前一天、后一天文章完成，换肤修改，增加异步loading

--- a/.prettierrc
+++ b/.prettierrc
@@ -4,8 +4,8 @@
   "printWidth": 100,
   "overrides": [
     {
-      "files": ".prettierrc",
-      "options": { "parser": "json" }
+      "files": ".prettierrc"
+      // "options": { "parser": "json" }
     }
   ]
 }
